Modified some variables in the zoo and web config

--- a/web.config
+++ b/web.config
@@ -5,7 +5,16 @@
             <clear />
             <application name="rails.project">
                 <environmentVariables>
-                    <add name="Path" value="%SystemDrive%\Git\bin;%GEM_HOME%\bin;%SystemDrive%\Ruby23-x64\bin;%SystemDrive%\Zoo\Ruby.2.Devkit\bin;%Path%" />
+                    <add name="ENGINE_PATH" value="C:\Ruby23-x64" />
+                    <add name="RAILS_ENV" value="development" />
+                    <add name="RACK_ENV" value="%RAILS_ENV%" />
+                    <add name="RAILS_RELATIVE_URL_ROOT" value="%APPL_VIRTUAL_PATH%" />
+                    <add name="GEM_PATH" value="%APPL_PHYSICAL_SHORT_PATH%\.gems;%ENGINE_PATH%\lib\ruby\gems\2.3.0" />
+                    <add name="GEM_HOME" value="%APPL_PHYSICAL_SHORT_PATH%\.gems" />
+                    <add name="Path" value="C:\Git\bin;%ENGINE_PATH%\bin;%GEM_HOME%\bin;C:\nodejs;%Path%" />
+                    <add name="DEPLOY_FILE" value="deploy.rb" />
+                    <add name="ERROR_LOG_DIR" value="log" />
+                    <add name="WORKER_REQUEST_TIMEOUT" value="1000" />
                 </environmentVariables>
             </application>
         </heliconZoo>
@@ -13,5 +22,18 @@
             <add name="rails.project#x64" path="*" verb="*" modules="HeliconZoo_x64" scriptProcessor="ruby.2.3x64.rack" resourceType="Unspecified" requireAccess="Script" preCondition="bitness64" />
             <add name="rails.project#x86" path="*" verb="*" modules="HeliconZoo_x86" scriptProcessor="ruby.2.3x64.rack" resourceType="Unspecified" requireAccess="Script" preCondition="bitness32" />
         </handlers>
+        <!-- Send static files through IIS -->
+        <rewrite>
+            <rules>
+                <rule name="Avoid Static Files" stopProcessing="true">
+                    <match url="^(?!public)(.*)$" ignoreCase="false" />
+                        <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
+                            <add input="{APPL_PHYSICAL_PATH}" pattern="(.*)" ignoreCase="false" />
+                            <add input="{C:1}public\{R:1}" matchType="IsFile" />
+                        </conditions>
+                    <action type="Rewrite" url="public/{R:1}" />
+                </rule>
+            </rules>
+        </rewrite>
     </system.webServer>
 </configuration>
